# wgpu-simple2d

./: Cargo.toml  README.md  build.rs
src/: components.rs  game.rs  main.rs  renderer.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  state.rs  texture.rs
src/components/: mod.rs
src/systems/: animation.rs  clipping.rs  collision.rs  flag_reached.rs  gravity.rs  health.rs  mod.rs  physics.rs  player_animation.rs  player_movement.rs  player_pineapple.rs  points_ticking_down.rs  velocity.rs
