[package]
name = "wgpu-simple2d"
version = "0.1.0"
authors = ["mrusek <michal.rusiu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22"
futures = "0.3"
image = "0.23"
anyhow = "1.0"
bytemuck = "1.4"
wgpu_glyph = "0.13.0"
env_logger = "0.8"

[dependencies.wgpu]
version = "0.9"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.6"